# dependency-visualizer

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/dependency_visualizer/: __init__.py  main.py
src/dependency_visualizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test_project/: exclude_this.py  main.py  tach.toml  test_a.py  top_level_script.py
test_project/pkg_a/: module_a.py  module_a2.py
test_project/pkg_a/sub_a/: __init__.py  logic_a.py
test_project/pkg_b/: module_b.py  module_b2.py
test_project/pkg_b/sub_b/: __init__.py  logic_b.py
test_project/pkg_c/: __init__.py  module_c.py
test_project/plain_scripts/: importer_script.py  script_a.py
test_project/top_module/: __init__.py  data_processor.py
test_project/top_module/deep_module/: __init__.py  math_utils.py
test_project/top_module/deep_module/deeper/: __init__.py
test_project/top_module/deep_module/deeper/deepest/: __init__.py  science_module.py
test_project/top_module/module1/moduleA/: __init__.py
test_project/top_module/module1/moduleA/moduleAA/: moduleAAA.py
test_project/utils/: __init__.py  helpers.py
